devtools/client/netmonitor/src/assets/styles/RequestList.css
/* ... */
/
*
Requests
list
column
*
/
/
*
Status
column
*
/
.
requests
-
list
-
status
{
width
:
8
%
;
/
*
Don
'
t
ellipsize
status
codes
*
/
text
-
overflow
:
initial
;
}
.
theme
-
firebug
.
requests
-
list
-
status
{
font
-
weight
:
bold
;
}
.
requests
-
list
-
status
-
code
{
margin
-
inline
-
start
:
3px
;
width
:
3em
;
}
.
requests
-
list
-
status
-
icon
{
background
:
#
fff
;
height
:
10px
;
width
:
10px
;
margin
-
inline
-
start
:
5px
;
margin
-
inline
-
end
:
5px
;
border
-
radius
:
10px
;
transition
:
box
-
shadow
0
.
5s
ease
-
in
-
out
;
}
.
request
-
list
-
item
.
selected
.
requests
-
list
-
status
-
icon
{
filter
:
brightness
(
1
.
3
)
;
}
.
requests
-
list
-
status
-
icon
:
not
(
[
data
-
code
]
)
{
background
-
color
:
var
(
-
-
theme
-
content
-
color2
)
;
}
.
requests
-
list
-
status
-
icon
[
data
-
code
=
"
cached
"
]
{
border
:
2px
solid
var
(
-
-
theme
-
content
-
color2
)
;
background
-
color
:
transparent
;
}
.
requests
-
list
-
status
-
icon
[
data
-
code
^
=
"
1
"
]
{
background
-
color
:
var
(
-
-
status
-
code
-
color
-
1xx
)
;
}
.
requests
-
list
-
status
-
icon
[
data
-
code
^
=
"
2
"
]
{
background
-
color
:
var
(
-
-
status
-
code
-
color
-
2xx
)
;
}
/
*
3xx
are
triangles
*
/
.
requests
-
list
-
status
-
icon
[
data
-
code
^
=
"
3
"
]
{
background
-
color
:
var
(
-
-
status
-
code
-
color
-
3xx
)
;
width
:
0
;
height
:
0
;
border
-
left
:
5px
solid
transparent
;
border
-
right
:
5px
solid
transparent
;
border
-
bottom
:
10px
solid
var
(
-
-
theme
-
highlight
-
lightorange
)
;
border
-
radius
:
0
;
}
/
*
4xx
and
5xx
are
squares
-
error
codes
*
/
.
requests
-
list
-
status
-
icon
[
data
-
code
^
=
"
4
"
]
{
background
-
color
:
var
(
-
-
status
-
code
-
color
-
4xx
)
;
border
-
radius
:
0
;
/
*
squares
*
/
}
.
requests
-
list
-
status
-
icon
[
data
-
code
^
=
"
5
"
]
{
background
-
color
:
var
(
-
-
status
-
code
-
color
-
5xx
)
;
border
-
radius
:
0
;
transform
:
rotate
(
45deg
)
;
}
/
*
Method
column
*
/
.
requests
-
list
-
method
{
width
:
8
%
;
}
.
theme
-
firebug
.
requests
-
list
-
method
{
color
:
rgb
(
128
128
128
)
;
}
/
*
File
column
*
/
.
requests
-
list
-
file
{
width
:
22
%
;
}
.
requests
-
list
-
file
.
requests
-
list
-
column
{
text
-
align
:
start
;
}
/
*
Protocol
column
*
/
.
requests
-
list
-
protocol
{
width
:
8
%
;
}
/
*
Cookies
column
*
/
.
requests
-
list
-
cookies
{
width
:
6
%
;
}
/
*
Set
Cookies
column
*
/
.
requests
-
list
-
set
-
cookies
{
width
:
8
%
;
}
/
*
Scheme
column
*
/
.
requests
-
list
-
scheme
{
width
:
8
%
;
}
/
*
Start
Time
column
*
/
.
requests
-
list
-
start
-
time
{
width
:
8
%
;
}
/
*
End
Time
column
*
/
.
requests
-
list
-
end
-
time
{
width
:
8
%
;
}
/
*
Response
Time
column
*
/
.
requests
-
list
-
response
-
time
{
width
:
10
%
;
}
/
*
Duration
column
*
/
.
requests
-
list
-
duration
{
width
:
8
%
;
}
/
*
Latency
column
*
/
.
requests
-
list
-
latency
{
width
:
8
%
;
}
/
*
Response
header
columns
*
/
.
requests
-
list
-
response
-
header
{
width
:
10
%
;
}
/
*
Domain
column
*
/
.
requests
-
list
-
domain
{
width
:
13
%
;
}
.
requests
-
list
-
domain
.
requests
-
list
-
column
{
text
-
align
:
start
;
}
.
requests
-
security
-
state
-
icon
{
display
:
inline
-
block
;
width
:
16px
;
height
:
16px
;
margin
:
0
4px
;
vertical
-
align
:
top
;
}
.
request
-
list
-
item
.
selected
.
requests
-
security
-
state
-
icon
{
filter
:
brightness
(
1
.
3
)
;
}
.
security
-
state
-
insecure
{
background
-
image
:
url
(
chrome
:
/
/
devtools
/
skin
/
images
/
security
-
state
-
insecure
.
svg
)
;
}
.
security
-
state
-
secure
{
background
-
image
:
url
(
chrome
:
/
/
devtools
/
skin
/
images
/
security
-
state
-
secure
.
svg
)
;
}
.
security
-
state
-
weak
{
background
-
image
:
url
(
chrome
:
/
/
devtools
/
skin
/
images
/
security
-
state
-
weak
.
svg
)
;
}
.
security
-
state
-
broken
{
background
-
image
:
url
(
chrome
:
/
/
devtools
/
skin
/
images
/
security
-
state
-
broken
.
svg
)
;
}
.
security
-
state
-
local
{
background
-
image
:
url
(
chrome
:
/
/
devtools
/
skin
/
images
/
globe
.
svg
)
;
}
/
*
RemoteIP
column
*
/
.
requests
-
list
-
remoteip
{
width
:
9
%
;
}
/
*
Cause
column
*
/
.
requests
-
list
-
cause
{
width
:
9
%
;
}
.
requests
-
list
-
cause
-
stack
{
display
:
inline
-
block
;
background
-
color
:
var
(
-
-
theme
-
body
-
color
-
alt
)
;
color
:
var
(
-
-
theme
-
body
-
background
)
;
font
-
size
:
8px
;
font
-
weight
:
bold
;
line
-
height
:
10px
;
border
-
radius
:
3px
;
padding
:
0
2px
;
margin
:
0
;
margin
-
inline
-
end
:
3px
;
}
/
*
Type
column
*
/
.
requests
-
list
-
type
{
width
:
6
%
;
}
/
*
Transferred
column
*
/
.
requests
-
list
-
transferred
{
width
:
9
%
;
}
/
*
Size
column
*
/
.
requests
-
list
-
size
{
width
:
7
%
;
}
.
theme
-
firebug
.
requests
-
list
-
size
{
justify
-
content
:
end
;
padding
-
inline
-
end
:
4px
;
}
/
*
Waterfall
column
*
/
.
requests
-
list
-
waterfall
{
width
:
20vw
;
max
-
width
:
20vw
;
min
-
width
:
20vw
;
background
-
repeat
:
repeat
-
y
;
background
-
position
:
left
center
;
/
*
Background
created
on
a
<
canvas
>
in
js
.
*
/
/
*
see
devtools
/
client
/
netmonitor
/
src
/
waterfall
-
background
.
js
*
/
background
-
image
:
-
moz
-
element
(
#
waterfall
-
background
)
;
}
.
requests
-
list
-
waterfall
:
dir
(
rtl
)
{
background
-
position
:
right
center
;
}
.
requests
-
list
-
waterfall
>
.
requests
-
list
-
header
-
button
{
padding
-
inline
-
start
:
0
;
}
.
requests
-
list
-
waterfall
>
.
requests
-
list
-
header
-
button
>
.
button
-
text
{
width
:
auto
;
}
.
requests
-
list
-
waterfall
-
label
-
wrapper
:
not
(
.
requests
-
list
-
waterfall
-
visible
)
{
padding
-
inline
-
start
:
16px
;
}
.
requests
-
list
-
timings
-
division
{
display
:
inline
-
block
;
padding
-
inline
-
start
:
4px
;
font
-
size
:
75
%
;
pointer
-
events
:
none
;
text
-
align
:
start
;
}
:
root
[
platform
=
"
win
"
]
.
requests
-
list
-
timings
-
division
{
padding
-
top
:
1px
;
font
-
size
:
90
%
;
}
/* ... */

