Backed out changeset 76d24a5414eb (bug 1429721) for devtools failure on browser_net_headers-alignment.js. on a CLOSED TREE
UltraBlame original commit: 74e94759584cda78f2c715bbb8a5c3ab1c524e37

--- a/devtools/client/netmonitor/src/assets/styles/RequestList.css
+++ b/devtools/client/netmonitor/src/assets/styles/RequestList.css
@@ -1958,6 +1958,25 @@ width
 }
 /
 *
+Domain
+column
+*
+/
+.
+requests
+-
+list
+-
+domain
+{
+width
+:
+13
+%
+;
+}
+/
+*
 Start
 Time
 column
@@ -2060,13 +2079,6 @@ width
 %
 ;
 }
-/
-*
-Response
-header
-columns
-*
-/
 .
 requests
 -
@@ -2075,25 +2087,6 @@ list
 response
 -
 header
-{
-width
-:
-10
-%
-;
-}
-/
-*
-Domain
-column
-*
-/
-.
-requests
--
-list
--
-domain
 {
 width
 :
